2008-07-29  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	FILE_LIST_SORT_ASCENDING -> GTK_SORT_ASCENDING, FILE_LIST_SORT_DESCENDING -> GTK_SORT_DESCENDING

2008-07-28  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in: Bumped version to 1.2.8


##############################################################################
#                                   1.2.7                                    #
##############################################################################

2008-07-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file.h:
	Invalidate metadata for modified files

2008-07-28  Padraig O'Briain  <Padraig.Obriain@Sun.COM>

	* src/filter.cc:
	* src/gnome-cmd-file-popmenu.cc:
	* src/utils.cc:
	Correctly handle FNM_CASEFOLD when building on non-Gnu systems

2008-07-25  Marius Siegas  <inkredibl@gmail.com>

	* src/gnome-cmd-xfer.cc:
	Fix for "(null)" filename in message dlg

2008-07-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-search-dialog.cc:
	Fixed problem #532615 (file operations on wrong file)

	* src/gnome-cmd-main-win.cc:
	Fixed problem #522430 (quick search for files starting with uppercase)

2008-07-23  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-quicksearch-popup.cc:
	Fixed problem #538806 (quick search in root dir)

2008-07-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file-selector.h:
	* src/gnome-cmd-user-actions.cc:
	Fix for setting the current working directory to the remote inactive one (CTRL+., CTRL+LEFT/RIGHT)

2008-07-20  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con.cc:
	Fix for bug introduced in rev. #1669

2008-07-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-prepare-xfer-dialog.cc:
	Fix for upload problem

2008-07-18  Piotr Eljasiak  <epiotr@use.pl>
