@@ -118,7 +118,7 @@ static void destroy (GtkObject *object)
     if (dir->priv->path)
         gtk_object_unref (GTK_OBJECT (dir->priv->path));
 
-    gnome_cmd_dir_pool_remove (gnome_cmd_con_get_dir_pool (dir->priv->con), dir);
+    gnome_cmd_con_get_dir_pool (dir->priv->con)->remove (dir);
 
     dir->priv->handle->ref = NULL;
     handle_unref (dir->priv->handle);
